--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -17,7 +17,7 @@
 
 {% block footer %}
     <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}" {% if page == 'celebrations' %}class="current"{% endif %}>Celebrations</a></li>
-    <li><a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}" {% if page == 'people' %}class="current"{% endif %}>People</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}" {% if page == 'people' %}class="current"{% endif %}>Contacts</a></li>
     <li><a href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}" {% if page == 'events' %}class="current"{% endif %}>Events</a></li>
     <li><a href="{{ path('gospelcenterAdmin_pages', {'center': center.ref}) }}" {% if page == 'pages' %}class="current"{% endif %}>Pages</a></li>
     <li><a href="{{ path('gospelcenterAdmin_images', {'center': center.ref}) }}" {% if page == 'images' %}class="current"{% endif %}>Images</a></li>
