--- a/src/gospelcenter/CelebrationBundle/Resources/views/MobileCelebration/add.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/MobileCelebration/add.html.twig
@@ -40,7 +40,7 @@
     	</fieldset>
     	
     	<fieldset class="block">
-    	    {{ form_widget(form.image.file) }}
+    	    {{ form_widget(form.image.file, {'attr': {'data-title': 'Select an image.'} }) }}
     	</fieldset>
     	
     	<fieldset class="block">
