--- a/src/gospelcenter/ImageBundle/Resources/views/AdminMobile/add.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminMobile/add.html.twig
@@ -23,7 +23,7 @@
         </fieldset>
         
         <fieldset class="block">
-            {{ form_widget(form.file) }}
+            {{ form_widget(form.file, {'attr': {'data-title': 'Select an image.'} }) }}
         </fieldset>
         
         <fieldset class="block">
