--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
@@ -72,7 +72,7 @@
         
             <fieldset class="languages">
                 {{ form_label(form.languages, "languages") }}
-                {{ form_widget(form.languages) }}
+                {{ form_widget(form.languages, {'attr': {'class': 'selectMultiple'} }) }}
             </fieldset>
             
             <fieldset class="checkbox">
@@ -82,7 +82,7 @@
             
             <fieldset>
                 {{ form_label(form.function, "Function") }}
-                {{ form_widget(form.function) }}
+                {{ form_widget(form.function, {'attr': {'placeholder': '. . .'} }) }}
             </fieldset>
             
             <fieldset class="checkbox">
