--- a/src/gospelcenter/EventBundle/Resources/views/AdminMobile/edit.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/AdminMobile/edit.html.twig
@@ -8,18 +8,22 @@
     {{ parent() }}
 {% endblock %}
 
-{% block headerLeft%}<a id="back" class="left" href="{{ path('gospelcenterAdmin_events', {'center': center.nickname}) }}"></a>{% endblock %}
+{% block headerLeft%}<a id="back" class="left" href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}"></a>{% endblock %}
 {% block headerCenter %}Edit an event{% endblock %}
 {% block headerRight %}{% endblock %}
 
 {% block body %}
     
-    <form class="celebration" action="{{ path('gospelcenterAdmin_celebrations_edit', {'center': center.nickname, 'event': event.id}) }}" method="post" {{ form_enctype(form) }}>
+    <form class="celebration" action="{{ path('gospelcenterAdmin_events_edit', {'center': center.ref, 'event': event.id}) }}" method="post" {{ form_enctype(form) }}>
 
     	{{ form_errors(form) }}
     	
     	<fieldset class="block">
     	    {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+    	</fieldset>
+    	
+    	<fieldset class="block">
+    	    {{ form_widget(form.status, {'attr': {'data-icon': 'status'} }) }}
     	</fieldset>
     	
     	<fieldset class="block">
@@ -34,7 +38,22 @@
             </fieldset>
     	</fieldset>
     	
+    	<fieldset class="block">
+    	    {{ form_widget(form.introText, {'attr': {'placeholder': 'Intro text'} }) }}
+            {{ form_widget(form.text, {'attr': {'placeholder': 'Full text'} }) }}
+    	</fieldset>
     	
+    	<fieldset class="block">
+    	    {{ form_widget(form.location, {'attr': {'placeholder': 'Location'} }) }}
+    	</fieldset>
+    	
+    	<fieldset class="block">
+    	    {{ form_widget(form.picture.file, {'attr': {'data-title': 'Select a picture.'} }) }}
+    	</fieldset>
+    	
+    	<fieldset class="block">
+    	    {{ form_widget(form.cover.file, {'attr': {'data-title': 'Select a cover.'} }) }}
+    	</fieldset>
         
         {{ form_rest(form) }}
         
