--- a/src/gospelcenter/ImageBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/Admin/add.html.twig
@@ -25,9 +25,9 @@
     	</nav>
     	
         {{ form_widget(form.file) }}
-        {{ form_widget(form.title, {'attr': {'data-label': 'Title'} }) }}
-        {{ form_widget(form.type, {'attr': {'data-label': 'Type'} }) }}
-        {{ form_widget(form.description, {'attr': {'data-label': 'Description'} }) }}
+        {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_widget(form.type, {'attr': {'placeholder': 'Type'} }) }}
+        {{ form_widget(form.description, {'attr': {'placeholder': 'Description'} }) }}
         {{ form_rest(form) }}
         
     </form>
