--- a/src/gospelcenter/ImageBundle/Resources/views/Admin/edit.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/Admin/edit.html.twig
@@ -28,9 +28,9 @@
     	
     	<img src="{{ asset(image.webPath) }}" alt="{{ image.alt }}" />
     	
-        {{ form_widget(form.title, {'attr': {'data-label': 'Title'} }) }}
-        {{ form_widget(form.type, {'attr': {'data-label': 'Type'} }) }}
-        {{ form_widget(form.description, {'attr': {'data-label': 'Description'} }) }}
+        {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_widget(form.type, {'attr': {'placeholder': 'Type'} }) }}
+        {{ form_widget(form.description, {'attr': {'placeholder': 'Description'} }) }}
         {{ form_rest(form) }}
     </form>
     
