--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
@@ -19,12 +19,12 @@
     <h1>Admin - Add a location</h1>
     
     <form action="{{ path('gospelcenterAdmin_locations_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form.name, {'attr': {'data-label': 'Name'} }) }}
-        {{ form_widget(form.address1, {'attr': {'data-label': 'Address line 1'} }) }}
-        {{ form_widget(form.address2, {'attr': {'data-label': 'Address line 2'} }) }}
-        {{ form_widget(form.postalCode, {'attr': {'data-label': 'Postal code'} }) }}
-        {{ form_widget(form.city, {'attr': {'data-label': 'City'} }) }}
-        {{ form_widget(form.country, {'attr': {'data-label': 'Country'} }) }}
+        {{ form_widget(form.name, {'attr': {'placeholder': 'Name'} }) }}
+        {{ form_widget(form.address1, {'attr': {'placeholder': 'Address line 1'} }) }}
+        {{ form_widget(form.address2, {'attr': {'placeholder': 'Address line 2'} }) }}
+        {{ form_widget(form.postalCode, {'attr': {'placeholder': 'Postal code'} }) }}
+        {{ form_widget(form.city, {'attr': {'placeholder': 'City'} }) }}
+        {{ form_widget(form.country, {'attr': {'placeholder': 'Country'} }) }}
         {{ form_rest(form) }}
         <nav>
     		<input type="submit" class="buttonRounded" />
