--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/edit.html.twig
@@ -25,9 +25,9 @@
     	</nav>
     	
     	{{ form_widget(form.image.file) }}
-        {{ form_widget(form.title, {'attr': {'data-label': 'Title'} }) }}
-        {{ form_widget(form.text, {'attr': {'data-label': 'Text'} }) }}
-        {{ form_widget(form.link, {'attr': {'data-label': 'Link'} }) }}
+        {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_widget(form.text, {'attr': {'placeholder': 'Text'} }) }}
+        {{ form_widget(form.link, {'attr': {'placeholder': 'Link'} }) }}
         {{ form_widget(form.labelLink, {'attr': {'placeholder': 'Link label'} }) }}
         {{ form_widget(form.page) }}
         {{ form_rest(form) }}
