Change People title to Contacts

--- a/src/gospelcenter/PeopleBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - People</h1>
+    <h1>Admin - Contacts</h1>
     <section class="tools">
         <a href="{{ path('gospelcenterAdmin_persons_add', {'center': center.ref}) }}">Add a contact</a>
     </section>
