fixed bug for no placeholder in editCelebration

--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
@@ -63,8 +63,8 @@
             <fieldset class="full">
                 <h2>Preaching</h2>
                 
-                {{ form_widget(form.title, {'attr': {'data-label': 'Title'} }) }}
-                {{ form_widget(form.description, {'attr': {'data-label': 'Description'} }, {'attr': {'class': 'elastic'} }) }}
+                {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+                {{ form_widget(form.description, {'attr': {'placeholder': 'Description'} }, {'attr': {'class': 'elastic'} }) }}
             </fieldset>
             
             
