--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -14,6 +14,20 @@
 
 {% block body %}
         
-    <img src="images/logo.svg" alt="Gospel Center {{ center.name }}" />
+    <img src="{{ asset('images/logoGCL.png') }}" id="logo" alt="Gospel Center {{ center.name }}" />
+    
+    <section id="news">
+        {% if celebrations|length %}
+            {% for celebration in celebrations %}
+                <a href="{{ path('gospelcenterCelebrations_list', {'center': center.ref}) }}"><img src="{{ asset(celebration.image.webPath) }}" alt="{{ celebration.image.alt }}" /></a>
+            {% endfor %}
+        {% endif %}
+        
+        {% if events|length %}
+            {% for event in events %}
+                <a href="{{ path('gospelcenterEvents_event', {'center': center.ref, 'event': event.id}) }}"><img src="{{ asset(event.picture.webPath) }}" alt="{{ event.title }}" /></a>
+            {% endfor %}
+        {% endif %}
+    </section>
         
 {% endblock %}
