--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -54,7 +54,8 @@ table {
   display: block;
   width: 960px;
   margin: -80px auto 30px;
-  height: 50px; }
+  height: 50px;
+  position: absolute; }
   #container nav.tools input,
   #container nav.tools a {
     float: right;
