--- a/web/sass/admin.scss
+++ b/web/sass/admin.scss
@@ -30,6 +30,7 @@
         width: 960px;
         margin: -80px auto 30px;
         height: 50px;
+        position: absolute;
         
         input,
         a {
