--- a/web/sass/admin.scss
+++ b/web/sass/admin.scss
@@ -206,6 +206,40 @@
         	}
         	
     	}
+    	
+    	
+    	div.radio-icon {
+        	display: block;
+        	
+        	div {
+            	height: 40px;
+                width: 40px;
+                cursor: pointer;
+                display: inline-block;
+                margin-left: 10px;
+                margin-right: 10px;
+                
+                &#man {
+                	background: url('../images/man_0.svg');
+                	background-size: 100% 100%;
+                	
+                	&.selected {
+                    	background: url('../images/man_1.svg');
+                    	background-size: 100% 100%;
+                	}
+            	}
+            	
+            	&#woman {
+                	background: url('../images/woman_0.svg');
+                	background-size: 100% 100%;
+                	
+                	&.selected {
+                    	background: url('../images/woman_1.svg');
+                    	background-size: 100% 100%;
+                	}
+            	}
+        	}
+    	}
 
     	
     	&.celebration {
